--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "platform": "Polymer/platform#master",
-    "x-tags-elements": "Polymer/x-tags-elements#master",
-    "polymer-ui-icon-button": "Polymer/polymer-ui-icon-button#master"
+    "platform": "Polymer/platform#0.1.4",
+    "x-tags-elements": "Polymer/x-tags-elements#0.1.0",
+    "polymer-ui-icon-button": "Polymer/polymer-ui-icon-button#0.1.4"
   }
 }
